--- a/.env.dist
+++ b/.env.dist
@@ -5,12 +5,12 @@
 
 # Manage cluster from the vagrant host:
 #   export EXPOSE_MASTER=true
-EXPOSE_MANAGED=true
+EXPOSE_MANAGED=false
 
 # Bind the manager default kubernetes proxy port
 # to the vagrant host:
 #   export EXPOSE_PROXY=true
-EXPOSE_PROXY=true
+EXPOSE_PROXY=false
 
 # Memory for the cluster's VMs:
 #   export NODE_MEMORY=2048
