--- a/provisioning/hosts.yml
+++ b/provisioning/hosts.yml
@@ -1,13 +1,3 @@
-master:
-  hosts:
-    192.168.77.10:
-      ansible_hostname: master
-      ansible_fqdn: master.kp.vm
-      ansible_host: 192.168.77.10
-      ansible_user: vagrant
-      ansible_ssh_pass: vagrant
-      ansible_ssh_private_key_file: /vagrant/.vagrant/machines/master/virtualbox/private_key
-
 ctl:
   hosts:
     192.168.77.9:
@@ -18,9 +8,17 @@ ctl:
       ansible_ssh_pass: vagrant
       ansible_ssh_private_key_file: /vagrant/.vagrant/machines/bootstrap/virtualbox/private_key
 
-cluster:
-  children:
-    master:
+master:
+  hosts:
+    192.168.77.10:
+      ansible_hostname: master
+      ansible_fqdn: master.kp.vm
+      ansible_host: 192.168.77.10
+      ansible_user: vagrant
+      ansible_ssh_pass: vagrant
+      ansible_ssh_private_key_file: /vagrant/.vagrant/machines/master/virtualbox/private_key
+
+workers:
   hosts:
     192.168.77.11:
       ansible_hostname: worker1
@@ -36,3 +34,8 @@ cluster:
       ansible_user: vagrant
       ansible_ssh_pass: vagrant
       ansible_ssh_private_key_file: /vagrant/.vagrant/machines/worker2/virtualbox/private_key
+
+cluster:
+  children:
+    master:
+    workers:
