Fixed Ansible inventory

--- a/provisioning/hosts.yml
+++ b/provisioning/hosts.yml
@@ -4,9 +4,7 @@ ctl:
       ansible_hostname: ctl
       ansible_fqdn: ctl.kp.vm
       ansible_host: 192.168.77.9
-      ansible_user: vagrant
-      ansible_ssh_pass: vagrant
-      ansible_ssh_private_key_file: /vagrant/.vagrant/machines/bootstrap/virtualbox/private_key
+      ansible_ssh_private_key_file: /vagrant/.vagrant/machines/ctl/virtualbox/private_key
 
 master:
   hosts:
@@ -14,8 +12,6 @@ master:
       ansible_hostname: master
       ansible_fqdn: master.kp.vm
       ansible_host: 192.168.77.10
-      ansible_user: vagrant
-      ansible_ssh_pass: vagrant
       ansible_ssh_private_key_file: /vagrant/.vagrant/machines/master/virtualbox/private_key
 
 workers:
@@ -24,18 +20,18 @@ workers:
       ansible_hostname: worker1
       ansible_fqdn: worker1.kp.vm
       ansible_host: 192.168.77.11
-      ansible_user: vagrant
-      ansible_ssh_pass: vagrant
       ansible_ssh_private_key_file: /vagrant/.vagrant/machines/worker1/virtualbox/private_key
     192.168.77.12:
       ansible_hostname: worker2
       ansible_fqdn: worker2.kp.vm
       ansible_host: 192.168.77.12
-      ansible_user: vagrant
-      ansible_ssh_pass: vagrant
       ansible_ssh_private_key_file: /vagrant/.vagrant/machines/worker2/virtualbox/private_key
 
 cluster:
   children:
     master:
     workers:
+
+all:
+  vars:
+    ansible_user: vagrant
