--- a/provisioning/hosts.yml
+++ b/provisioning/hosts.yml
@@ -35,3 +35,5 @@ cluster:
 all:
   vars:
     ansible_user: vagrant
+    ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+    ansible_python_interpreter: /usr/bin/python3
