--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -12,7 +12,7 @@
         mode: '0600'
 
 - hosts: all
-  become: true
+  become: yes
   strategy: free
   gather_facts: yes
   tasks:
@@ -46,7 +46,7 @@
         append: yes
 
 - hosts: cluster
-  become: true
+  become: yes
   strategy: free
   tasks:
     - name: Remove apt lock file
@@ -66,7 +66,6 @@
           - curl
         update_cache: yes
         state: present
-        force: yes
       tags: apt
 
     - name: Add the Google signing key
@@ -84,12 +83,14 @@
     - name: Add the k8s APT repository
       apt_repository:
         repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
+        filename: 'kubernetes'
         state: present
       tags: apt
 
     - name: Add Docker apt repository
       apt_repository:
         repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable
+        filename: 'docker'
         state: present
       tags: apt
 
@@ -114,7 +115,7 @@
         src: "{{ playbook_dir }}/templates/docker-daemon.json"
         dest: /etc/docker/daemon.json
 
-    - name: Create necessary directories if they don't exist
+    - name: Create necessary docker directory
       file:
         path: /etc/systemd/system/docker.service.d
         state: directory
@@ -179,7 +180,7 @@
         append: yes
 
 - hosts: master
-  become: true
+  become: yes
   strategy: free
   tasks:
     - name: Create necessary directories if they don't exist
@@ -217,3 +218,62 @@
 
     - name: Pulling images required for setting up a Kubernetes cluster
       shell: "kubeadm config images pull"
+
+    - name: Bootstrap Kubernetes control-plane node
+      shell: "kubeadm init --apiserver-advertise-address={{ ansible_host }} --pod-network-cidr=192.168.0.0/16 >> cluster.txt"
+      args:
+        chdir: $HOME
+        creates: cluster.txt
+
+
+    - name: Create .kube directory
+      become: yes
+      become_user: vagrant
+      file:
+        path: $HOME/.kube
+        state: directory
+        mode: 0755
+
+    - name: Copy admin.conf to user's kube config
+      copy:
+        src: /etc/kubernetes/admin.conf
+        dest: /home/vagrant/.kube/config
+        remote_src: yes
+        owner: vagrant
+
+    - name: Install Pod network Add-On
+      become: yes
+      become_user: vagrant
+      shell: kubectl apply -f https://docs.projectcalico.org/v3.8/manifests/calico.yaml >> network.txt
+      args:
+        chdir: $HOME
+        creates: network.txt
+
+    - name: Install Dashboard Add-On
+      become: yes
+      become_user: vagrant
+      shell: kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v1.10.1/src/deploy/recommended/kubernetes-dashboard.yaml >> dashboard.txt
+      args:
+        chdir: $HOME
+        creates: dashboard.txt
+
+- hosts: master
+  become: yes
+  gather_facts: false
+  tasks:
+    - name: Get cluster join command
+      shell: kubeadm token create --print-join-command
+      register: join_command_raw
+
+    - name: Set cluster join command
+      set_fact:
+        join_command: "{{ join_command_raw.stdout_lines[0] }} --ignore-preflight-errors=all"
+
+- hosts: workers
+  become: yes
+  tasks:
+    - name: Join to cluster
+      shell: "{{ hostvars[groups['master'][0]].join_command }} >> joined.txt"
+      args:
+        chdir: $HOME
+        creates: joined.txt
