Collect resulting artifacts

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -220,11 +220,10 @@
       shell: "kubeadm config images pull"
 
     - name: Bootstrap Kubernetes control-plane node
-      shell: "kubeadm init --apiserver-advertise-address={{ ansible_host }} --pod-network-cidr=192.168.0.0/16 >> cluster.txt"
+      shell: "kubeadm init --apiserver-advertise-address={{ ansible_host }} --pod-network-cidr=192.168.0.0/16 >> {{ ansible_hostname }}-cluster.log"
       args:
-        chdir: $HOME
-        creates: cluster.txt
-
+        chdir: /vagrant/logs
+        creates: "{{ ansible_hostname }}-cluster.log"
 
     - name: Create .kube directory
       become: yes
@@ -244,20 +243,21 @@
     - name: Install Pod network Add-On
       become: yes
       become_user: vagrant
-      shell: kubectl apply -f https://docs.projectcalico.org/v3.8/manifests/calico.yaml >> network.txt
+      shell: "kubectl apply -f https://docs.projectcalico.org/v3.8/manifests/calico.yaml >> {{ ansible_hostname }}-network.log"
       args:
-        chdir: $HOME
-        creates: network.txt
+        chdir: /vagrant/logs
+        creates: "{{ ansible_hostname }}-network.log"
 
     - name: Install Dashboard Add-On
       become: yes
       become_user: vagrant
-      shell: kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v1.10.1/src/deploy/recommended/kubernetes-dashboard.yaml >> dashboard.txt
+      shell: "kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v1.10.1/src/deploy/recommended/kubernetes-dashboard.yaml >> {{ ansible_hostname }}-dashboard.log"
       args:
-        chdir: $HOME
-        creates: dashboard.txt
+        chdir: /vagrant/logs
+        creates: "{{ ansible_hostname }}-dashboard.log"
 
-- hosts: master
+- name: Setting up joining to the Kubernetes cluster
+  hosts: master
   become: yes
   gather_facts: false
   tasks:
@@ -269,11 +269,12 @@
       set_fact:
         join_command: "{{ join_command_raw.stdout_lines[0] }} --ignore-preflight-errors=all"
 
-- hosts: workers
+- name: Join to the Kubernetes cluster
+  hosts: workers
   become: yes
   tasks:
     - name: Join to cluster
-      shell: "{{ hostvars[groups['master'][0]].join_command }} >> joined.txt"
+      shell: "{{ hostvars[groups['master'][0]].join_command }} >> {{ ansible_hostname }}-joined.log"
       args:
-        chdir: $HOME
-        creates: joined.txt
+        chdir: /vagrant/logs
+        creates: "{{ ansible_hostname }}-joined.log"
