--- a/provisioning/ansible.cfg
+++ b/provisioning/ansible.cfg
@@ -1,6 +1,8 @@
 [defaults]
 host_key_checking = False
 interpreter_python = /usr/bin/python3
+roles_path = roles
+command_warnings = False
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=30m -o ConnectionAttempts=100 -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
