Load settings from all system configuration files at provision time

--- a/provisioning/roles/kubernetes/preinstall/tasks/network.yml
+++ b/provisioning/roles/kubernetes/preinstall/tasks/network.yml
@@ -4,6 +4,9 @@
     src: kubernetes-cri.conf.j2
     dest: /etc/sysctl.d/99-kubernetes-cri.conf
 
+- name: Load settings from all system configuration files
+  command: sysctl --system
+
 - name: Load bridge-netfilter module
   shell: modprobe br_netfilter
 
