--- a/provisioning/roles/docker/tasks/main.yml
+++ b/provisioning/roles/docker/tasks/main.yml
@@ -1,4 +1,21 @@
 ---
+# TODO: Make it better
+- name: Grab DNS server from resolv.conf
+  shell: "grep -E '^nameserver ([0-9]{1,3}\\.){1,3}[0-9]{1,3}$' /etc/resolv.conf | cut -d' ' -f2"
+  register: found_dns
+
+- name: Set DNS server for docker
+  set_fact:
+    docker_dns_servers: "{{ [found_dns.stdout|ipaddr|default(ansible_default_ipv4.gateway)] }}"
+
+- name: Add Google DNS servers
+  set_fact:
+    docker_dns_servers: "{{ docker_dns_servers + ['8.8.8.8'|ipaddr] }}"
+
+- name: Docker DNS servers
+  debug:
+    msg: "{{ docker_dns_servers }}"
+
 - name: Add Docker's official GPG key
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
@@ -27,7 +44,7 @@
 
 - name: Create docker service systemd directory if it doesn't exist
   file:
-    name: /etc/systemd/system/docker.service.d
+    path: /etc/systemd/system/docker.service.d
     state: directory
     owner: root
     group: root
@@ -35,7 +52,7 @@
 
 - name: Ensure docker data root folder exists
   file:
-    name: "{{ docker_data_root }}"
+    path: "{{ docker_data_root }}"
     state: directory
     owner: root
     group: root
@@ -46,6 +63,12 @@
     src: docker-options.conf.j2
     dest: /etc/systemd/system/docker.service.d/docker-options.conf
   register: docker_options
+
+- name: Write docker dns systemd drop-in
+  template:
+    src: docker-dns.conf.j2
+    dest: /etc/systemd/system/docker.service.d/docker-dns.conf
+  register: docker_dns
 
 - name: Write docker unit systemd drop-in
   template:
@@ -62,7 +85,9 @@
     daemon_reload: yes
     name: docker
     no_block: yes
-  when: docker_options.changed or docker_unit.changed
+  when: docker_options.changed or
+        docker_unit.changed or
+        docker_dns.changed
 
 - name: Restart kubelet service
   systemd:
@@ -72,7 +97,9 @@
     no_block: yes
   when:
     - "'kubelet.service' in services"
-    - docker_options.changed or docker_unit.changed
+    - docker_options.changed or
+      docker_unit.changed or
+      docker_dns.changed
 
 - name: Adding regular user to docker group
   user:
